# JarvisOS

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  jarvis.db  pyproject.toml
src/jarvis/: __init__.py  main.py
src/jarvis/api/: app.py  exceptions.py  middleware.py
src/jarvis/api/v1/: chat.py  health.py  router.py
src/jarvis/core/: config.py  logging.py
src/jarvis/database/: __init__.py  models.py
src/jarvis/providers/: __init__.py  ollama.py
src/jarvis/services/: __init__.py  ai_os_command_pipeline.py  application_manager.py  application_resolver.py  chat.py  command_router.py  entity_extraction.py  file_manager.py  file_resolver.py  intent_detection.py  planner.py  tool_executor.py  tool_registry_adapter.py  url_resolver.py
src/jarvis/tools/: __init__.py  application.py  base.py  browser.py  exceptions.py  file_tool.py  registry.py  terminal.py
src/jarvis/tools/browser_automation/: __init__.py  result.py  state.py
tests/: test_application_integration.py  test_application_manager.py  test_application_resolver.py  test_browser.py  test_browser_automation.py  test_command_router.py  test_config.py  test_database.py  test_entity_extraction.py  test_file_integration.py  test_file_manager.py  test_file_resolver.py  test_file_tool.py  test_logging.py  test_terminal.py  test_tool_executor.py  test_tools.py  test_url_resolver.py
tests/api/: conftest.py  test_chat.py  test_exception_handlers.py  test_health.py  test_middleware.py  test_version.py
tests/providers/: test_ollama.py
tests/services/: test_chat.py
(+4 files in other folders)
